aligned text on footer correctly, animations were corrected

--- a/Less/navigation.less
+++ b/Less/navigation.less
@@ -1,1 +1,35 @@
+header {
+    background-color: teal; 
+    display: flex; 
+    flex-direction: row-reverse; 
+    align-items:center; 
 
+    div{
+        width: 50%; 
+    }
+
+    nav{
+        display: flex; 
+        justify-content:space-around; 
+
+        a{
+            font-size: 2rem; 
+            text-decoration: none; 
+            color: black; 
+        }
+
+        a:hover{
+            color:beige;
+        }
+    }
+
+    .MC-logo{
+        display:flex;
+        align-items:center;
+
+        p{
+            font-size: 2rem;
+            color:white;
+        }
+    }
+}
